# bayesian_filters

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  README.rst  TESTING.md  conf.py  conftest.py  creating_a_release.rst  import-upstream-comments.py  import-upstream-issues.py  imported-comments.json  imported-prs.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: deploy-docs.yml  test-coverage.yml
.hypothesis/constants/: 02005bbee7a55682  0492fa827a712490  083f90f19173eb03  175cb1e399cd569f  2554aa264227851c  2e7bc01e0a044593  2ffb07639a936418  3c84b7ef2d5ddda9  418565b875cdd235  4b0ed83cb2a4b310  50e6632f7779f0dd  55cb452dfba91cd6  596d4b4dc37bea3a  5bd1beac0033b3f0  5dd0f508c9deb2ca  67b0a8ccf18bf5d2  68b87af3e5b1443b  6eccbc7c7c86ed9f  725df3bef4f0efd7  73f7d716b737145e  74047c20b20e757e  78f449a91e3989d1  8024dc79639c4aed  80c204e383a6d5c2  8137754e30d0d627  8155ea1da0741a5f  855973b5c573e470  866b3a494693c123  87191149bd003c9e  8906636283fe30de  9a32e3db148973f4  9d29fe15eb30f74d  a881ce0feea8a5f2  bf05c3581d48aa7d  c3bff2cd306f21b8  c50ca52fa18fdc8e  ca43b7530ec90117  d21de301a5c2e1a9  d2b72496fefbd262  d358933f98502578  (+8 more)
algorithms/discrete-bayes/: index.html
algorithms/gh-filter/: index.html
algorithms/ghk-filter/: index.html
algorithms/least-squares/: index.html
algorithms/monte-carlo/: index.html
api/common/: index.html
api/discrete-bayes/: index.html
api/gh/: index.html
api/kalman/: index.html
api/leastsq/: index.html
api/monte-carlo/: index.html
api/stats/: index.html
bayesian_filters/common/: discretization.py  helpers.py  kinematic.py
bayesian_filters/discrete_bayes/: discrete_bayes.py
bayesian_filters/examples/: RadarUKF.py  bearing_only.py  radar_sim.py
bayesian_filters/gh/: gh_filter.py
bayesian_filters/hinfinity/: __init__.py  hinfinity_filter.py
bayesian_filters/kalman/: CubatureKalmanFilter.py  EKF.py  IMM.py  UKF.py  ensemble_kalman_filter.py  fading_memory.py  fixed_lag_smoother.py  information_filter.py  kalman_filter.py  mmae.py  sigma_points.py  square_root.py
bayesian_filters/leastsq/: least_squares.py
bayesian_filters/memory/: fading_memory.py
bayesian_filters/stats/: stats.py
bayesian_filters/testing_utils/: __init__.py  fixtures.py  helpers.py  numerical.py
changelog/: index.html
contributing/: index.html
docs/: changelog.md  conf.py  index.md  research.md
docs-mkdocs/algorithms/: gh-filter.md
docs-mkdocs/api/: gh.md
docs-mkdocs/filters/: extended-kalman-filter.md  fading-kalman-filter.md  h-infinity-filter.md  kalman-filter.md  mmae-filter-bank.md  unscented-kalman-filter.md
docs/algorithms/: discrete-bayes.md  ghk-filter.md
docs/api/: common.md  stats.md
docs/filters/: ensemble-kalman-filter.md  extended-kalman-filter.md  imm-estimator.md  information-filter.md  kalman-filter.md  square-root-filter.md
examples/: index.html
filterpy/kalman/: kalman_filter.py
filters/ensemble-kalman-filter/: index.html
filters/extended-kalman-filter/: index.html
filters/fading-kalman-filter/: index.html
filters/h-infinity-filter/: index.html
filters/imm-estimator/: index.html
filters/information-filter/: index.html
filters/kalman-filter/: index.html
filters/mmae-filter-bank/: index.html
filters/square-root-filter/: index.html
filters/unscented-kalman-filter/: index.html
scratch_files/: PUBLISHING.md  TESTING_PLAN.md  TYPE_ANNOTATIONS.md
scripts/: filterpy_repos.csv  import-upstream-prs.py  scrape_filterpy_repos.py
search/: search_index.json
(+29 files in other folders)
