[project]
name = "bayesian-filters"
version = "1.4.5"
description = "Kalman filtering and optimal estimation library"
readme = "README.rst"
authors = [
    { name = "Roger Labbe", email = "rlabbejr@gmail.com" }
]
requires-python = ">=3.6"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
keywords = ["Kalman", "filters", "filtering", "optimal", "estimation", "tracking"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/GeorgePearse/filterpy"
Repository = "https://github.com/GeorgePearse/filterpy"
"Original Project" = "https://github.com/rlabbe/filterpy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["filterpy"]
