[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bayesian-filters"
dynamic = ["version"]
description = "Kalman filtering and optimal estimation library"
readme = "README.rst"
authors = [
    { name = "Roger Labbe", email = "rlabbejr@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]
keywords = ["Kalman", "filters", "filtering", "optimal", "estimation", "tracking", "Bayesian"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/GeorgePearse/filterpy"
Repository = "https://github.com/GeorgePearse/filterpy"
"Original Project" = "https://github.com/rlabbe/filterpy"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.version]
path = "bayesian_filters/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["bayesian_filters"]

[tool.pytest.ini_options]
testpaths = ["bayesian_filters"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
